fixed colors and spacing,added resume.html, refractor code

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,9 @@
 /* added some different var of colors */
 :root {
-    --main-color:#ff702a;
-    --text-color: #fff;
-    --bg-color: #1e1c2a;
+    --main-color:#463f3a;
+    --hover-color: #D4A373;
+    --text-color: #463f3a;
+    --bg-color: #CCD5AE;
     --big-font: 5rem;
     --h2-font: 2.25rem;
     --p-font: .9rem;
@@ -12,7 +13,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Sans-serif;
+    font-family: 'Abril Fatface', serif;
+    font-family: 'Crimson Text', serif;
+    font-family: 'Kanit', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
     scroll-behavior: smooth;
     list-style: none;
     text-decoration: none;
@@ -45,6 +50,7 @@ header {
     color: var(--main-color);
     font-weight: 600;
     font-size: 2.4rem;
+    padding: 20px;
 
 }
 
@@ -55,21 +61,45 @@ header {
 
 .navbar a {
     color: var(--text-color);
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     padding: 10px 20px;
     font-weight: 500px;
+    margin-left: 40px;
+    position: relative;
 }
 
 .navbar a:hover {
-    color: var(--main-color);
+    color: var(--hover-color);
     transition: .3s;
 }
 
 section {
-    padding: 70px 17%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 20px;
+    margin: 10px;
 }
 
-.home {
+.section-detail {
+    margin: 20px auto;
+    padding-bottom: 50px;
+    width: 100%;
+    display: flex;
+}
+
+.section-title {
+    font-size: 48px;
+    display: inline-block;
+    border-right: 5px solid;
+    margin-right: 35px;
+    color: var(--main-color);
+    text-align: right;
+    padding: 50px;
+    flex-basis: 25%;
+}
+
+.about-me {
     width: 100%;
     min-height: 90vh;
     display: grid;
@@ -79,22 +109,23 @@ section {
 }
 
 .self-image img {
-    max-width: 50%;
-    max-height: 75%;
-    height: auto;
+    width: 50%;
+    height: 50%;
+    padding: 2rem;
+    position:relative;
+    left: 150px;
+    border: solid var(--main-color);
 }
 
-.home-text h1 {
- font-size: 50px;
+/* .about-me h1 {
+ font-size: 25px;
  color: var(--main-color);
 
-}
+} */
 
-.home-text p {
+.about-me p {
     font-size: 20px;
     font-family: Sans-serif;
-    margin: 1rem 0 2rem;
-
 }
 
 .github, .contact {
@@ -117,16 +148,15 @@ section {
     font-weight: 600;
 }
 
-.github-text p {
-    margin: 0.8rem 0 1.8rem;
-    line-height: 1.7;
+.github p {
+    font-size: 20px;
+    font-family: Sans-serif;
 }
 
-.contact-text ul {
+.contact ul {
     color: var(--text-color);
-    font-size: 1.1rem;
-    padding: 10px 20px;
-    font-weight: 500px;
+    font-size: 20px;
+    font-family: Sans-serif;
 }
 
 
